[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui_bg.png" type="Texture" id=1]
[ext_resource path="res://src/SigmarOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 0.478431 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Settings" type="Node2D"]
script = ExtResource( 3 )

[node name="LevelSelect" type="Sprite" parent="."]
position = Vector2( 428.482, 241.216 )
scale = Vector2( 0.446291, 0.446291 )
texture = ExtResource( 1 )

[node name="title" type="Label" parent="."]
margin_left = 280.0
margin_top = 40.0
margin_right = 560.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "GAME SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fs_title" type="Label" parent="."]
margin_left = 152.0
margin_top = 138.0
margin_right = 406.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "fullscreen MODE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_title" type="Label" parent="."]
margin_left = 288.0
margin_top = 194.0
margin_right = 408.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 1 )
text = "MUSIC"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_title" type="Label" parent="."]
margin_left = 168.0
margin_top = 258.0
margin_right = 399.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "SOUND EFFECTS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 439.0
margin_top = 133.0
margin_right = 515.0
margin_bottom = 173.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider" type="HSlider" parent="."]
margin_left = 447.0
margin_top = 205.0
margin_right = 615.0
margin_bottom = 221.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_slider" type="HSlider" parent="."]
margin_left = 447.0
margin_top = 269.0
margin_right = 615.0
margin_bottom = 285.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
modulate = Color( 1, 0.168627, 0.168627, 1 )
margin_left = 336.0
margin_top = 344.0
margin_right = 524.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.811765, 0.117647, 1 )
text = "Okay"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="fx_slider" to="." method="_on_fx_slider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
